Fix address data and minor spacing

--- a/src/components/WarehouseInfo/WarehouseInfo.scss
+++ b/src/components/WarehouseInfo/WarehouseInfo.scss
@@ -102,7 +102,7 @@
     }
 
     &__column {
-        width: 13rem;
+        width: 50%;
 
         &--address {
             width: 100%;
